greycat-analyzer-syntax/snapshots/parser_fixtures__for_in_long_header__out.snap
---
source: greycat-analyzer-syntax/tests/snapshot.rs
assertion_line: 134
expression: "fn f() {\n    for (\n        i,\n        k,\n        v in indexed_long_iterator_name.member_access.something_else_long_name_aaa sampling 100 limit 50 skip 10\n    ) {\n        x;\n    }\n}\n"
---
(module
  (fn_decl
    name: (ident 'f')
    params: (fn_params '()')
    body: (block
      (for_in_stmt
        (for_in_param
          name: (ident 'i')
        )
        (for_in_param
          name: (ident 'k')
        )
        (for_in_param
          name: (ident 'v')
        )
        iterator: (member_expr
          (member_expr
            (ident 'indexed_long_iterator_name')
            property: (ident 'member_access')
          )
          property: (ident 'something_else_long_name_aaa')
        )
        (for_in_clause
          keyword: (ident 'sampling')
          value: (number
            (number_int '100')
          )
        )
        (for_in_clause
          keyword: (ident 'limit')
          value: (number
            (number_int '50')
          )
        )
        (for_in_clause
          keyword: (ident 'skip')
          value: (number
            (number_int '10')
          )
        )
        block: (block
          (expr_stmt
            (ident 'x')
          )
        )
      )
    )
  )
)
